2004-01-25  Moritz Schulte  <mo@g10code.com>

	* ath.h: Include <config.h>.

2004-01-12  Moritz Schulte  <mo@g10code.com>

	* gcrypt.h: Adjusted declarations of: gcry_ac_data_set,
	gcry_ac_data_get_name, gcry_ac_data_get_index,
	gcry_ac_key_pair_generate, gcry_ac_key_test,
	gcry_ac_key_get_nbits, gcry_ac_key_get_grip.

	* gcrypt.h (GCRY_AC_FLAG_DATA_NO_BLINDING): Removed symbol.
	(GCRY_AC_FLAG_DEALLOC, GCRY_AC_FLAG_COPY) 
	(GCRY_AC_FLAG_NO_BLINDING): New symbols.

	* global.c (gcry_strdup): Removed function.
	* string.c: New file.
	* Makefile.am (libgcrypt_real_la_SOURCES): Added: string.c.
	* string.c (gcry_strdup): New function.
	* gcrypt.h (gcry_strdup): Declare.

2003-12-19  Werner Koch  <wk@gnupg.org>

	* g10lib.h (wipememory, wipememory2): New; taken from gnupg.

2003-11-14  Werner Koch  <wk@gnupg.org>

	* global.c (gcry_strdup): Don't copy the string after a malloc
	error.

2003-11-11  Werner Koch  <wk@gnupg.org>

	* sexp.c (sexp_sscan): Implemented "%b" format specifier.

2003-11-11  Moritz Schulte  <mo@g10code.com>

	* libgcrypt.m4: Do not set prefix when calling libgcrypt-config.
	Thanks to Nikos Mavroyanopoulos.

2003-11-08  Moritz Schulte  <mo@g10code.com>

	* cipher.h (small_prime_numbers): Removed declaration.
	(PUBKEY_FLAG_NO_BLINDING): Put braces around shift.

2003-11-04  Werner Koch  <wk@gnupg.org>

	* cipher.h (_gcry_sha1_has_buffer): New.

	* gcrypt.h (gcry_create_nonce): New.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* libgcrypt.vers (_gcry_generate_elg_prime): Removed this symbol;
	gnutls does not need it anymore.

	* secmem.c (mb_get_new): s/pool/block/ due to global pool.

	* misc.c (gcry_set_log_handler): s/logf/f/ to avoid shadowing
	warning against a builtin.

	* ath-pth-compat.c: cast pth_connect to get rid of the const
	prototype.

2003-10-27  Werner Koch  <wk@gnupg.org>

	* ath.h (ATH_MUTEX_INITIALIZER): Removed spurious semicolon.

2003-10-27  Moritz Schulte  <mo@g10code.com>
