@@ -1,3 +1,7 @@
+2004-02-03  Werner Koch  <wk@gnupg.org>
+
+	* tsexp.c (basic): New pass to check secure memory switching.
+
 2004-01-12  Moritz Schulte  <mo@g10code.com>
 
 	* ac.c (check_one): Adjust to new ac API.
